// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactBootstrapTable /> renders table with all type of data 1`] = `
<ReactBootstrapTable__Container>
  <Table
    bordered={true}
    bsClass="table"
    condensed={false}
    hover={true}
    responsive={false}
    striped={false}
  >
    <thead>
      <tr>
        <th
          key="0"
          style={
            Object {
              "display": "table-cell",
              "width": "100px",
            }
          }
        >
          <FormattedMessage
            id="Title"
            values={Object {}}
          />
        </th>
        <th
          key="1"
          style={
            Object {
              "display": "table-cell",
              "width": "250px",
            }
          }
        >
          <FormattedMessage
            id="implementation-phase"
            values={Object {}}
          />
        </th>
        <th
          key="2"
          style={
            Object {
              "display": "table-cell",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="admin.fields.theme.status"
            values={Object {}}
          />
        </th>
        <th
          key="3"
          style={
            Object {
              "display": "table-cell",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="project_download.label.author"
            values={Object {}}
          />
        </th>
        <th
          key="4"
          style={
            Object {
              "display": "table-cell",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="proposal.admin.reference"
            values={Object {}}
          />
        </th>
        <th
          key="5"
          style={
            Object {
              "display": "table-cell",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="proposal.estimation"
            values={Object {}}
          />
        </th>
        <th
          key="6"
          style={
            Object {
              "display": "table-cell",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="project_download.label.likers"
            values={Object {}}
          />
        </th>
        <th
          key="7"
          style={
            Object {
              "display": "table-cell",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="last-activity"
            values={Object {}}
          />
        </th>
        <th
          key="8"
          style={
            Object {
              "display": "table-cell",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="published-on"
            values={Object {}}
          />
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          key="0"
        >
          <a
            href="http://google.com"
          >
            Ravalement de la façade de la bibliothèque municipale
          </a>
        </td>
        <td
          className="m-auto"
          key="1"
        >
          <div
            className="mb-10"
          >
            <span>
              In progress
            </span>
          </div>
          <ProgressList
            className="mt-10"
            progressListItem={
              Array [
                Object {
                  "isActive": true,
                  "title": "Before",
                },
                Object {
                  "isActive": false,
                  "title": "In progress",
                },
                Object {
                  "isActive": false,
                  "title": "After",
                },
              ]
            }
          />
        </td>
        <td
          key="2"
        >
          <Label
            bsClass="label"
            bsStyle="default"
            className="badge-pill"
          />
        </td>
        <td
          key="3"
        >
          <div
            className="d-flex align-items-center"
          >
            <Connect(UserAvatar)
              defaultAvatar={null}
              user={
                Object {
                  "_links": Object {},
                  "media": null,
                  "username": "Jean",
                }
              }
            />
            <a
              href="http://google.com"
            >
              Jean
            </a>
          </div>
        </td>
        <td
          key="4"
        >
          89789
        </td>
        <td
          key="5"
        >
          347280
           €
        </td>
        <td
          key="6"
        >
          <InlineList
            className="mb-0"
          >
            <li
              key="0"
            >
              Maude
            </li>
            <li
              key="1"
            >
              Marie
            </li>
          </InlineList>
        </td>
        <td
          key="7"
        >
          <FormattedMessage
            id="last-activity-date"
            values={
              Object {
                "date": <FormattedDate
                  value={2018-07-26T22:00:00.000Z}
                />,
                "user": "admin",
              }
            }
          />
        </td>
        <td
          key="8"
        >
          <FormattedDate
            value={2018-06-26T22:00:00.000Z}
          />
        </td>
      </tr>
      <tr
        key="1"
      >
        <td
          key="0"
        >
          <a
            href="http://google.com"
          >
            Installation de bancs sur la place de la mairie
          </a>
        </td>
        <td
          className="m-auto"
          key="1"
        >
          <div
            className="mb-10"
          >
            <span />
          </div>
          <ProgressList
            className="mt-10"
            progressListItem={Array []}
          />
        </td>
        <td
          key="2"
        />
        <td
          key="3"
        />
        <td
          key="4"
        />
        <td
          key="5"
        />
        <td
          key="6"
        />
        <td
          key="7"
        />
        <td
          key="8"
        >
          <FormattedDate
            value={2018-06-28T22:00:00.000Z}
          />
        </td>
      </tr>
    </tbody>
  </Table>
</ReactBootstrapTable__Container>
`;

exports[`<ReactBootstrapTable /> renders table with hidden columns & N/A th for ref 1`] = `
<ReactBootstrapTable__Container>
  <Table
    bordered={true}
    bsClass="table"
    condensed={false}
    hover={true}
    responsive={false}
    striped={false}
  >
    <thead>
      <tr>
        <th
          key="0"
          style={
            Object {
              "display": "table-cell",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="Title"
            values={Object {}}
          />
        </th>
        <th
          key="1"
          style={
            Object {
              "display": "none",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="implementation-phase"
            values={Object {}}
          />
        </th>
        <th
          key="2"
          style={
            Object {
              "display": "none",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="admin.fields.theme.status"
            values={Object {}}
          />
        </th>
        <th
          key="3"
          style={
            Object {
              "display": "none",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="global.non_applicable"
            values={Object {}}
          />
        </th>
        <th
          key="4"
          style={
            Object {
              "display": "none",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="proposal.estimation"
            values={Object {}}
          />
        </th>
        <th
          key="5"
          style={
            Object {
              "display": "none",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="project_download.label.likers"
            values={Object {}}
          />
        </th>
        <th
          key="6"
          style={
            Object {
              "display": "none",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="last-activity"
            values={Object {}}
          />
        </th>
        <th
          key="7"
          style={
            Object {
              "display": "table-cell",
              "width": "200px",
            }
          }
        >
          <FormattedMessage
            id="published-on"
            values={Object {}}
          />
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          key="0"
        >
          <a
            href="http://google.com"
          >
            Plantation de tulipes dans les jardinière du parking de saint jean
          </a>
        </td>
        <td
          key="7"
        >
          <FormattedDate
            value={2018-06-28T22:00:00.000Z}
          />
        </td>
      </tr>
      <tr
        key="1"
      >
        <td
          key="0"
        >
          <a
            href="http://google.com"
          >
            Marc
          </a>
        </td>
        <td
          key="7"
        >
          <FormattedDate
            value={2018-06-26T22:00:00.000Z}
          />
        </td>
      </tr>
    </tbody>
  </Table>
</ReactBootstrapTable__Container>
`;
